20050601
 - (dtucker) [configure.ac] Look for _getshort and _getlong in
   arpa/nameser.h.

20050531
 - (dtucker) [contrib/aix/pam.conf] Correct comments.  From davidl at
   vintela.com.
 - (dtucker) [mdoc2man.awk] Teach it to understand .Ox.

20050530
 - (dtucker) [README] Link to new release notes.  Beter late than never...

20050529
 - (dtucker) [openbsd-compat/port-aix.c] Bug #1046: AIX 5.3 expects the
   argument to passwdexpired to be initialized to NULL.  Suggested by tim@
   While at it, initialize the other arguments to auth functions in case they
   ever acquire this behaviour.
 - (dtucker) [openbsd-compat/port-aix.c] Whitespace cleanups while there.
 - (dtucker) [openbsd-compat/port-aix.c] Minor correction to debug message,
   spotted by tim@.

20050528
 - (dtucker) [configure.ac] For AC_CHECK_HEADERS() and AC_CHECK_FUNCS() have
   one entry per line to make it easier to merge changes.  ok djm@
 - (dtucker) [configure.ac] strsep() may be defined in string.h, so check
   for its presence and include it in the strsep check.
 - (dtucker) [configure.ac] getpgrp may be defined in unistd.h, so check for
   its presence before doing AC_FUNC_GETPGRP.
 - (dtucker) [configure.ac] Merge HP-UX blocks into a common block with minor
   version-specific variations as required.
 - (dtucker) [openbsd-compat/port-aix.h] Use the HAVE_DECL_* definitions as
   per the autoconf man page.  Configure should always define them but it
   doesn't hurt to check.

20050527
 - (djm) [defines.h] Use our realpath if we have to define PATH_MAX, spotted by
   David Leach; ok dtucker@
 - (dtucker) [acconfig.h configure.ac defines.h includes.h sshpty.c
   openbsd-compat/bsd-misc.c] Add support for Ultrix.  No, that's not a typo.
   Required changes from Bernhard Simon, integrated by me.  ok djm@

20050525
 - (djm) [mpaux.c mpaux.h Makefile.in] Remove old mpaux.[ch] code, it has not 
   been used for a while
 - (djm) OpenBSD CVS Sync
   - otto@cvs.openbsd.org 2005/04/05 13:45:31