@@ -1,6 +1,9 @@
 20050601
  - (dtucker) [configure.ac] Look for _getshort and _getlong in
    arpa/nameser.h.
+ - (dtucker) [configure.ac openbsd-compat/Makefile.in openbsd-compat/strtoll.c]
+   Add strtoll to the compat library, from OpenBSD.
+
 
 20050531
  - (dtucker) [contrib/aix/pam.conf] Correct comments.  From davidl at
@@ -2649,4 +2652,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3803 2005/06/01 08:57:45 dtucker Exp $
+$Id: ChangeLog,v 1.3804 2005/06/01 11:39:33 dtucker Exp $
